Adds Opening of the html file